fixed gap by sign-in component

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -162,6 +162,9 @@ input {
   &:focus-visible {
     outline: unset;
   }
+  &:-webkit-autofill {
+    transition: background-color 5000s ease-in-out 0s;
+  }
 }
 
 .inputCont {
